--- a/src/users/presentation/render-table/render-table.css
+++ b/src/users/presentation/render-table/render-table.css
@@ -13,7 +13,7 @@ th {
     background-color: #ff6f00; /* naranja fuerte */
     color: white;
     padding: 12px;
-    text-align: left;
+    text-align: center;
     font-weight: bold;
     text-transform: uppercase;
 }
